update input overflow bug

--- a/src/features/search/searchInputs.scss
+++ b/src/features/search/searchInputs.scss
@@ -52,6 +52,10 @@ $_breakpoint2: 771;
         @include respond-to($_breakpoint, max) {
             margin-right: 1rem;
         }
+
+        @include respond-to-mobile() {
+            width: 100%;
+        }
     }
 
     &-text-input {
